:lipstick: style: add scrollBar style and fix some texts sizes

--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,51 @@
-
-:root{
-    --background-gradient: linear-gradient(260deg, #5F41D9 2.25%, #41B5D9 100.27%);
-    --teal-purple-gradient: linear-gradient( 60deg,#16d4d9 -10%,#5f41d9 70% );
-    --brand-colors-purple-pure: #5F41D9;
-    --brand-color: 153, 243, 245;
-    --neutral-colors-200: #423D51;
-    --neutral-colors-100: #130C25;
-    --neutral-colors-900: #E7E7E9;
-    --brand-colors-purple-dark: #432E98;
-    --brand-colors-teal-pure: #00E1E7
-
+:root {
+  --background-gradient: linear-gradient(
+    260deg,
+    #5f41d9 2.25%,
+    #41b5d9 100.27%
+  );
+  --teal-purple-gradient: linear-gradient(60deg, #16d4d9 -10%, #5f41d9 70%);
+  --brand-colors-purple-pure: #5f41d9;
+  --brand-color: 153, 243, 245;
+  --neutral-colors-200: #423d51;
+  --neutral-colors-100: #130c25;
+  --neutral-colors-900: #e7e7e9;
+  --brand-colors-purple-dark: #432e98;
+  --brand-colors-teal-pure: #00e1e7;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: var(----brand-colors-teal-pure);
 }
 
-html{
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--brand-colors-teal-pure);
+  border-radius: 0px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+html {
   font-size: 62.5%;
   font-family: var(--primary-font);
 }
 
-a{
+a {
   text-decoration: none;
-}     
-
+}
